# emsdesign

./: Cargo.toml
src/: constants.rs  lib.rs  test.rs  zeq.rs  zequality.rs
src/crs/: box.rs  chs.rs  circle.rs  heb.rs  mod.rs  rect.rs  standard.rs  tube.rs
src/crs/data/: CHS.csv  HEB.csv
src/crs/presets/: IPE.ron
src/erc/: NSEN_1993.rs  mod.rs
src/err/: dberror.rs  mod.rs
src/load/: loadcase.rs  mod.rs
src/mat/: mod.rs  steel.rs
src/mechanics/: mod.rs
src/mmb/: columnbeam.rs  mod.rs
